package com.softserve.edu07.hw.task2;

interface Vehicle {
}
