package com.softserve.edu07.hw.task2.abstract_element;

public abstract class Passengers {
    protected int passengers;

    public int getPassengers() {
        return passengers;
    }

    public void setPassengers(int passengers) {
        this.passengers = passengers;
    }
}
